syntax = "proto3";

package proto;
option java_multiple_files = true;

message CharacterSheet {
  string character_name = 1;
  repeated Class classes = 2;
  Race race = 3;

  repeated Ability abilities = 10;
  map<string, int32> custom_ability_increases = 11;

  // Should check if chosen skills are compatible with
  // class and race and background
  repeated string skills = 20;

  repeated string custom_languages = 50;
}

message Class {
  string name = 1;
  string subclass = 2;
  int32 level = 3;
  int32 proficiency_bonus = 4;

  int32 used_cantrips = 20;
  repeated SpellSlot spell_slots = 21;

  repeated string chosen_skills = 30;
}

message Race {
  string name = 1;

  // TODO chosen stuff
}

message SpellSlot {
  int32 level = 1;
  int32 used = 2;
}

message Ability {
  string name = 1;
  int32 base_value = 2;
}
