syntax = "proto3";

package proto;
option java_multiple_files = true;

message UserData {
    string loaded_sheet = 1;
}
